ADD - angular router

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -2,5 +2,5 @@
   <span class="qr-title">{{title}}</span>
 </div>
 <div style="height: 30%">
-    <span class="qr-description">Crie questões e disponibilize-ás em uma sala para que outros usuários possam respondê-las em tempo real valendo pontos</span>
+    <span class="qr-description">Elabore questões e crie uma sala as utilizando para que outros usuários possam respondê-las, em uma tempo determinado por você, em tempo real valendo pontos</span>
 </div>
