--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center" class="main">
   <app-toolbar></app-toolbar>
-  <app-home></app-home>
+  <router-outlet></router-outlet>
   <app-footer></app-footer>
 </div>
