--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -3,10 +3,10 @@
     <mat-toolbar-row>
       <span class="qr-logo">QR</span>
       <span class="app-spacer"></span>
-      <button mat-button>Página inicial</button>
-      <button mat-button>Minhas Questões</button>
+      <button routerLink="/" mat-button>Página inicial</button>
+      <button mat-button>Minhas Quetões</button>
       <button mat-button>Todas Questões</button>
-      <button mat-button>Sobre</button>
+      <button routerLink="/about" mat-button>Sobre</button>
       <span class="app-spacer"></span>
       <span class="app-spacer"></span>
       <span class="app-spacer"></span>
