Tela de login. #80

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center" class="main">
   <app-toolbar></app-toolbar>
-  <router-outlet></router-outlet>
+  <div style="min-height: 70%">
+    <router-outlet></router-outlet>
+  </div>
   <app-footer></app-footer>
 </div>
