--- a/client/src/app/account/singin/singin.component.html
+++ b/client/src/app/account/singin/singin.component.html
@@ -1,8 +1,20 @@
-<form (submit)="loginUser($event)">
-  <input id="name" placeholder="Nome" />
-  <br />
-  <input id="password" placeholder="Senha" />
-  <br />
-  <input type="submit" value="Enviar" />
-  <br />
-</form>
+<mat-card style="max-width: 400px; margin: 30px auto">
+  <mat-card-title>Login</mat-card-title>
+  <form (submit)="loginUser($event)">
+
+    <mat-form-field>
+      <input matInput id="email" placeholder="Email" />
+    </mat-form-field>
+    <br />
+    <mat-form-field>
+      <input matInput id="password" placeholder="Senha" />
+    </mat-form-field>
+    <br />
+    <button type="submit" mat-raised-button color="primary">Enviar</button>
+    <br />
+    <div [hidden]="!error">
+      <br />
+      <span class="error-message">{{error}}</span>
+    </div>
+  </form>
+</mat-card>
