--- a/client/src/app/account/singup/singup.component.html
+++ b/client/src/app/account/singup/singup.component.html
@@ -1,3 +1,21 @@
-<p>
-  singup works!
-</p>
+<mat-card style="max-width: 400px; margin: 30px auto">
+  <mat-card-title>Cadastro</mat-card-title>
+  <mat-form-field>
+    <input matInput id="name" placeholder="Nome" />
+  </mat-form-field>
+  <br />
+  <mat-form-field>
+    <input matInput id="email" placeholder="Email" />
+  </mat-form-field>
+  <br />
+  <mat-form-field>
+    <input matInput id="password" placeholder="Senha" />
+  </mat-form-field>
+  <br />
+  <mat-form-field>
+      <input matInput id="confirm" placeholder="Confirme a senha" />
+    </mat-form-field>
+    <br />
+  <button type="submit" mat-raised-button color="primary">Enviar</button>
+  <br />
+</mat-card>
