Ajute efeito troca de rotas

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center" class="main">
+<div class="main">
   <app-toolbar></app-toolbar>
-  <div style="min-height: 70%">
+  <div style="min-height: 80%">
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
