--- a/client/src/app/account/singin/singin.component.html
+++ b/client/src/app/account/singin/singin.component.html
@@ -1,6 +1,6 @@
-<mat-card style="max-width: 400px; margin: 30px auto">
-  <mat-card-title>Login</mat-card-title>
-  <form (submit)="loginUser($event)">
+<form (submit)="loginUser($event)" class="account-component">
+  <mat-card>
+    <mat-card-title>Login</mat-card-title>
 
     <mat-form-field>
       <input matInput id="email" placeholder="Email" />
@@ -16,5 +16,6 @@
       <br />
       <span class="error-message">{{error}}</span>
     </div>
-  </form>
-</mat-card>
+
+  </mat-card>
+</form>
