--- a/client/src/app/footer/footer.component.css
+++ b/client/src/app/footer/footer.component.css
@@ -1,8 +1,11 @@
 .footer{
-  background-color: #001B00AA;
-  background-color: #000;
-  height: 40px;
-  padding-top: 20px;
+  background-color: #000D;
+  position: fixed;
+  width: 100%;
+  height: 30px;
+  padding-top: 15px;
   color: #AAA;
+  bottom: 0;
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
