--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,7 +1,9 @@
-<div style="height: 40%">
-  <span class="qr-title">{{title}}</span>
-</div>
-<div style="height: 30%">
-  <span class="qr-description">Elabore questões e crie uma sala as utilizando para que outros usuários possam respondê-las, em uma tempo determinado por
-    você, em tempo real valendo pontos</span>
+<div style="text-align: center">
+  <div style="height: 40%">
+    <span class="qr-title">{{title}}</span>
+  </div>
+  <div style="height: 30%">
+    <span class="qr-description">Elabore questões e crie uma sala as utilizando para que outros usuários possam respondê-las, em uma tempo determinado
+      por você, em tempo real valendo pontos</span>
+  </div>
 </div>
