Finalizando tela de login. #80

--- a/client/src/app/account/singin/singin.component.html
+++ b/client/src/app/account/singin/singin.component.html
@@ -1,17 +1,21 @@
-<form (submit)="loginUser($event)" class="account-component">
+<form (submit)="loginUser()" #loginForm="ngForm" class="account-component">
   <mat-card>
     <mat-card-title>Login</mat-card-title>
 
     <mat-form-field>
-      <input matInput id="email" placeholder="Email" />
+      <input matInput placeholder="Seu email" [formControl]="user.email" required>
+      <mat-error *ngIf="user.email.invalid">{{getEmailErrorMessage()}}</mat-error>
     </mat-form-field>
+
     <br />
     <mat-form-field>
-      <input matInput id="password" placeholder="Senha" />
+      <input matInput placeholder="Sua senha" [formControl]="user.password" required type="password" />
+      <mat-error *ngIf="user.password.invalid">{{getPasswordErrorMessage()}}</mat-error>
     </mat-form-field>
     <br />
-    <button type="submit" mat-raised-button color="primary">Enviar</button>
+    <button [disabled]="user.email.invalid || user.password.invalid" type="submit" mat-raised-button color="primary">Enviar</button>
     <br />
+
     <div [hidden]="!error">
       <br />
       <span class="error-message">{{error}}</span>
