--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -32,4 +32,5 @@
       <mat-icon class="example-icon">delete</mat-icon> -->
     </mat-toolbar-row>
   </mat-toolbar>
+  <ngx-loading-bar diameter="40px" fixed="false" color="green" height="5px"></ngx-loading-bar>
 </mat-card>
