--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -57,4 +57,8 @@ $theme:   mat-light-theme($primary, $accent);
   max-width: 400px; 
   margin: 0px auto; 
   padding: 30px;
+  text-align: center;
+  mat-form-field{
+    width: 90%;
+  }
 }
