--- a/client/src/app/account/singin/singin.component.html
+++ b/client/src/app/account/singin/singin.component.html
@@ -3,20 +3,18 @@
     <mat-card-title>Login</mat-card-title>
 
     <mat-form-field>
-      <input matInput placeholder="Seu email" appEmail [formControl]="user.email" required>
-      <mat-error *ngIf="user.email.invalid">{{user.getEmailErrorMessage()}}</mat-error>
+      <input matInput placeholder="Seu email" appEmail [formControl]="user.email" required (change)="cleanError()" />
     </mat-form-field>
 
     <br />
     <mat-form-field>
-      <input matInput placeholder="Sua senha" [formControl]="user.password" required type="password" />
-      <mat-error *ngIf="user.password.invalid">{{user.getPasswordErrorMessage()}}</mat-error>
+      <input matInput placeholder="Sua senha" [formControl]="user.password" required type="password" (change)="cleanError()" />
     </mat-form-field>
     <br />
     <button [disabled]="user.email.invalid || user.password.invalid" type="submit" mat-raised-button color="primary">Enviar</button>
     <br />
 
-    <div [hidden]="!error">
+    <div [hidden]="!error" style="transition-duration: 200ms">
       <br />
       <span class="error-message">{{error}}</span>
     </div>
