Commit alteração de dados do usuário

--- a/client/src/app/account/singin/singin.component.html
+++ b/client/src/app/account/singin/singin.component.html
@@ -14,7 +14,7 @@
     <button [disabled]="user.email.invalid || user.password.invalid" type="submit" mat-raised-button color="primary">Enviar</button>
     <br />
 
-    <div [hidden]="!error" style="transition-duration: 200ms">
+    <div [hidden]="!error">
       <br />
       <span class="error-message">{{error}}</span>
     </div>
