--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -27,6 +27,7 @@
       </div>
       <div [hidden]="!logged">
         <button mat-button (click)="logout()">Sair</button>
+        <button [disabled]="path === '/sign-edit'" mat-button routerLink="/sign-edit">Minha conta</button>        
       </div>
       <!-- <mat-icon class="example-icon">favorite</mat-icon>
       <mat-icon class="example-icon">delete</mat-icon> -->
