Parcial - Tela de listagem das questões do usuário

--- a/client/src/app/questions/all-questions/all-questions.component.html
+++ b/client/src/app/questions/all-questions/all-questions.component.html
@@ -1,3 +1,20 @@
-<p>
-  all-questions works!
-</p>
+<form>
+
+  <mat-card>
+
+    <mat-card-title>ALL QUESTIONS WORKS! </mat-card-title>
+
+    <mat-form-field>
+      <input matInput placeholder="Seu email" />
+    </mat-form-field>
+
+    <br />
+    <mat-form-field>
+      <input matInput placeholder="Sua senha" />
+    </mat-form-field>
+    <br />
+    <button mat-raised-button color="primary">Enviar</button>
+    <br />
+
+  </mat-card>
+</form>
