--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -70,3 +70,9 @@ $theme:   mat-light-theme($primary, $accent);
     width: 90%;
   }
 }
+
+.question-component {  
+  // width: 100%; 
+  margin: 0px auto;
+  text-align: center;
+}
