--- a/client/src/app/questions/my-questions/my-questions.component.html
+++ b/client/src/app/questions/my-questions/my-questions.component.html
@@ -1,3 +1,34 @@
-<p>
-  my-questions works!
-</p>
+<mat-card style="width: 80%; margin: 0 auto; margin-top: 50px">
+  <mat-card-title>Minhas Questões</mat-card-title>
+  <div class="question-component">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="id">
+        <th fxFlex="30px" mat-header-cell *matHeaderCellDef> Número </th>
+        <td fxFlex="30px" mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Descrição </th>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="points">
+        <th mat-header-cell *matHeaderCellDef> Pontos </th>
+        <td mat-cell *matCellDef="let element"> {{element.points}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
+        <td mat-cell *matCellDef="let element" style="width: 180px">
+          <button mat-button color="primary">Editar</button>
+          <button mat-button color="warn">Excluir</button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <button (click)="openQuestionModal({})" style="margin-top: 20px" mat-raised-button color="primary">Nova Questão</button>
+  </div>
+</mat-card>
