--- a/client/src/app/questions/my-questions/my-questions.component.html
+++ b/client/src/app/questions/my-questions/my-questions.component.html
@@ -29,6 +29,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <button (click)="openQuestionModal({})" style="margin-top: 20px" mat-raised-button color="primary">Nova Questão</button>
+    <button (click)="openQuestionModal(null)" style="margin-top: 20px" mat-raised-button color="primary">Nova Questão</button>
   </div>
 </mat-card>
