Concluindo CRUD de questões

--- a/client/src/app/modals/question-modal.component.html
+++ b/client/src/app/modals/question-modal.component.html
@@ -3,7 +3,7 @@
     <mat-step>
       <ng-template matStepLabel>Pergunda</ng-template>
       <mat-form-field style="width: 100%">
-        <input matInput [(ngModel)]="question.description" placeholder="Qual a pergunta da questão ?" />
+        <input matInput [(ngModel)]="question.description" placeholder="Qual a pergunta da questão ?" required />
       </mat-form-field>
       <div class="action-button">
         <button mat-button mat-dialog-close>Cancelar</button>
@@ -11,7 +11,7 @@
       </div>
     </mat-step>
     <mat-step>
-      <ng-template matStepLabel>Pontuação</ng-template>
+      <ng-template disabled matStepLabel>Pontuação</ng-template>
       <br />
       <span class="success-message">
         Quantos pontos valem a questão ?
@@ -23,9 +23,10 @@
       </span>
       <div class="action-button">
         <button mat-button matStepperPrevious>Voltar</button>
-        <button [disabled]="question.points" mat-raised-button matStepperNext color="primary">Próximo</button>
+        <button [disabled]="!question.points" mat-raised-button matStepperNext color="primary">Próximo</button>
       </div>
     </mat-step>
+    
     <mat-step>
       <ng-template matStepLabel>Alternativas</ng-template>
       <mat-list>
@@ -34,7 +35,7 @@
           <button mat-mini-fab disabled>{{a.classification}}</button>
           <span class="horizontal-space"></span>
           <mat-form-field style="width: 100%">
-            <input matInput [(ngModel)]="a.description" placeholder="Descrição para alternativa {{a.classification}}" required />
+            <input matInput [(ngModel)]="a.description" placeholder="Descrição da alternativa {{a.classification}}" required />
           </mat-form-field>
           <span class="horizontal-space"></span>
           <mat-slide-toggle (change)="correctClick(a)" [matTooltip]="a.correct ? 'Correta' : 'Errada'" color="primary" [(ngModel)]="a.correct"></mat-slide-toggle>
@@ -43,7 +44,7 @@
 
       <div class="action-button">
         <button mat-button matStepperPrevious>VOLTAR</button>
-        <button [disabled]="!question.answers[0].description || !question.answers[1].description || !question.answers[2].description || !question.answers[3].description"
+        <button [disabled]="!question.description || !question.description || !question.answers[0].description || !question.answers[1].description || !question.answers[2].description || !question.answers[3].description"
           mat-raised-button color="primary" [mat-dialog-close]="question">PRONTO</button>
       </div>
     </mat-step>
