--- a/client/src/app/questions/my-questions/my-questions.component.html
+++ b/client/src/app/questions/my-questions/my-questions.component.html
@@ -4,8 +4,8 @@
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
       <ng-container matColumnDef="id">
-        <th fxFlex="30px" mat-header-cell *matHeaderCellDef> Número </th>
-        <td fxFlex="30px" mat-cell *matCellDef="let element"> {{element.id}} </td>
+        <th style="width: 100px" mat-header-cell *matHeaderCellDef> Número </th>
+        <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
@@ -22,7 +22,7 @@
         <th mat-header-cell *matHeaderCellDef style="width: 180px">Ações</th>
         <td mat-cell *matCellDef="let element" style="width: 180px">
           <button mat-button color="primary" (click)="openQuestionModal(element)">Editar</button>
-          <button mat-button color="warn">Excluir</button>
+          <button mat-button color="warn" (click)="remove(element.id)">Excluir</button>
         </td>
       </ng-container>
 
