--- a/client/src/app/modals/question-modal.component.html
+++ b/client/src/app/modals/question-modal.component.html
@@ -1,12 +1,29 @@
 <div style="min-width: 500px">
   <mat-horizontal-stepper #stepper>
     <mat-step>
+      <ng-template matStepLabel>Área</ng-template>
+      <mat-form-field>
+        <mat-select [(ngModel)]="selectedCategory" (selectionChange)="categoryChanged()" placeholder="Selecione a área">
+          <mat-option *ngFor="let c of categories" [value]="c">
+            {{ c }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field style="width: 100%">
+        <input matInput [disabled]="!customCategory" [(ngModel)]="question.category" placeholder="Qual a área da questão ?" required />
+      </mat-form-field>
+      <div class="action-button">
+        <button mat-button mat-dialog-close>Cancelar</button>
+        <button [disabled]="customCategory && !question.category" mat-raised-button matStepperNext color="primary">Próximo</button>
+      </div>
+    </mat-step>
+    <mat-step>
       <ng-template matStepLabel>Pergunda</ng-template>
       <mat-form-field style="width: 100%">
         <input matInput [(ngModel)]="question.description" placeholder="Qual a pergunta da questão ?" required />
       </mat-form-field>
       <div class="action-button">
-        <button mat-button mat-dialog-close>Cancelar</button>
+        <button mat-button matStepperPrevious>Voltar</button>
         <button [disabled]="!question.description" mat-raised-button matStepperNext color="primary">Próximo</button>
       </div>
     </mat-step>
@@ -26,7 +43,7 @@
         <button [disabled]="!question.points" mat-raised-button matStepperNext color="primary">Próximo</button>
       </div>
     </mat-step>
-    
+
     <mat-step>
       <ng-template matStepLabel>Alternativas</ng-template>
       <mat-list>
