Tela de listagem de salas

--- a/client/src/app/questions/all-questions/all-questions.component.html
+++ b/client/src/app/questions/all-questions/all-questions.component.html
@@ -1,5 +1,5 @@
 <mat-card style="width: 80%; margin: 0 auto; margin-top: 50px">
-  <mat-card-title>Questões Públicas</mat-card-title>
+  <mat-card-title>QUESTÕES PÚBLICAS</mat-card-title>
   <div class="question-component">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
