--- a/client/src/app/account/singup/singup.component.html
+++ b/client/src/app/account/singup/singup.component.html
@@ -1,42 +1,44 @@
-<form (submit)="createUser(accountForm)" #accountForm="ngForm" class="account-component">
-  <mat-card>
-    <mat-card-title>Cadastro</mat-card-title>
-    <mat-form-field>
-      <input matInput #name="ngModel" name="name" minlength="3" placeholder="Nome de usuário" [(ngModel)]="user.name" required
-        (change)="cleanError()" />
-      <mat-error *ngIf="email.errors?.required">Informe o nome</mat-error>
-      <mat-error *ngIf="email.errors?.minlength">O nome deve ter pelo menos 3 caracteres</mat-error>
-    </mat-form-field>
-    <br />
-    <mat-form-field>
-      <input matInput #email="ngModel" name="email" type="email" minlength="8" placeholder="Seu email" [(ngModel)]="user.email"
-        required (change)="cleanError()" />
-      <mat-error *ngIf="email.errors?.required">Informe o email</mat-error>
-      <mat-error *ngIf="email.errors?.email || email.errors?.minlength">Informe um email válido</mat-error>
-    </mat-form-field>
-    <br />
-    <mat-form-field>
-      <input matInput #password="ngModel" name="password" type="password" minlength="6" placeholder="Senha" [(ngModel)]="user.password"
-        required (change)="cleanError()" />
-      <mat-error *ngIf="password.errors?.required">Informe a senha</mat-error>
-      <mat-error *ngIf="password.errors?.minlength">A senha deve ter pelo menos 6 caracteres</mat-error>
-    </mat-form-field>
-    <br />
-    <div *ngIf="!editMode">
+<div style="text-align: center; width: 100%">
+  <form (submit)="createUser(accountForm)" #accountForm="ngForm" class="account-component">
+    <mat-card>
+      <mat-card-title>Cadastro</mat-card-title>
       <mat-form-field>
-        <input matInput #confirm="ngModel" name="confirm" type="password" appConfirmEqualValidator="password" placeholder="Confirme a senha"
-          [(ngModel)]="user.confirm" required (change)="cleanError()" />
-        <mat-error *ngIf="confirm.errors?.notequal && password.valid">As senhas não batem</mat-error>
-        <mat-error *ngIf="confirm.errors?.required && password.valid">Confirme a senha</mat-error>
+        <input matInput #name="ngModel" name="name" minlength="3" placeholder="Nome de usuário" [(ngModel)]="user.name" required
+          (change)="cleanError()" />
+        <mat-error *ngIf="email.errors?.required">Informe o nome</mat-error>
+        <mat-error *ngIf="email.errors?.minlength">O nome deve ter pelo menos 3 caracteres</mat-error>
       </mat-form-field>
-    </div>
-    <br />
-    <br />
-    <button [disabled]="accountForm.form.invalid" type="submit" mat-raised-button color="primary">Enviar</button>
-    <br />
+      <br />
+      <mat-form-field>
+        <input matInput #email="ngModel" name="email" type="email" minlength="8" placeholder="Seu email" [(ngModel)]="user.email"
+          required (change)="cleanError()" />
+        <mat-error *ngIf="email.errors?.required">Informe o email</mat-error>
+        <mat-error *ngIf="email.errors?.email || email.errors?.minlength">Informe um email válido</mat-error>
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input matInput #password="ngModel" name="password" type="password" minlength="6" placeholder="Senha" [(ngModel)]="user.password"
+          required (change)="cleanError()" />
+        <mat-error *ngIf="password.errors?.required">Informe a senha</mat-error>
+        <mat-error *ngIf="password.errors?.minlength">A senha deve ter pelo menos 6 caracteres</mat-error>
+      </mat-form-field>
+      <br />
+      <div *ngIf="!editMode">
+        <mat-form-field>
+          <input matInput #confirm="ngModel" name="confirm" type="password" appConfirmEqualValidator="password" placeholder="Confirme a senha"
+            [(ngModel)]="user.confirm" required (change)="cleanError()" />
+          <mat-error *ngIf="confirm.errors?.notequal && password.valid">As senhas não batem</mat-error>
+          <mat-error *ngIf="confirm.errors?.required && password.valid">Confirme a senha</mat-error>
+        </mat-form-field>
+      </div>
+      <br />
+      <br />
+      <button [disabled]="accountForm.form.invalid" type="submit" mat-raised-button color="primary">Enviar</button>
+      <br />
 
-    <span class="error-message">{{error}}</span>
-    <span class="success-message">{{message}}</span>
+      <span class="error-message">{{error}}</span>
+      <span class="success-message">{{message}}</span>
 
-  </mat-card>
-</form>
+    </mat-card>
+  </form>
+</div>
