--- a/client/src/app/footer/footer.component.css
+++ b/client/src/app/footer/footer.component.css
@@ -9,3 +9,13 @@
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
+
+.shadow-footer{
+  width: 100%;
+  height: 50px;
+  background-color: #0000;
+  color: #0000;
+  padding-top: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center; 
+}
