--- a/client/src/app/questions/my-questions/my-questions.component.html
+++ b/client/src/app/questions/my-questions/my-questions.component.html
@@ -1,28 +1,28 @@
-<mat-card style="width: 80%; margin: 0 auto; margin-top: 50px">
+<mat-card style="margin: 0 auto; margin-top: 10px">
   <mat-card-title>MINHAS QUESTÕES</mat-card-title>
   <div class="question-component" [hidden]="hasQuestions">
     <span>Você ainda não criou questões.</span>
   </div>
   <div class="question-component">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="!hasQuestions">
+    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" [hidden]="!hasQuestions">
 
       <ng-container matColumnDef="id">
-        <th style="width: 100px" mat-header-cell *matHeaderCellDef> Número </th>
+        <th style="width: 100px" mat-header-cell *matHeaderCellDef mat-sort-header> Número </th>
         <td style="width: 100px" mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
 
       <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef> Área </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Área </th>
         <td mat-cell *matCellDef="let element"> {{element.category}} </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef> Descrição </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Descrição </th>
         <td mat-cell *matCellDef="let element"> {{element.description}} </td>
       </ng-container>
 
       <ng-container matColumnDef="points">
-        <th mat-header-cell *matHeaderCellDef> Pontos </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Pontos </th>
         <td mat-cell *matCellDef="let element"> {{element.points}} </td>
       </ng-container>
 
@@ -46,6 +46,7 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     <button (click)="openQuestionModal(null)" style="margin-top: 20px" mat-raised-button color="primary">Nova Questão</button>
   </div>
 </mat-card>
