--- a/client/src/app/rooms/rooms.component.html
+++ b/client/src/app/rooms/rooms.component.html
@@ -28,7 +28,7 @@
 
       <ng-container matColumnDef="seconds">
         <th mat-header-cell *matHeaderCellDef> Tempo </th>
-        <td mat-cell *matCellDef="let element"> {{element.secondsStep}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.time}} </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
